[gd_scene load_steps=9 format=3 uid="uid://7dugcdvme1hy"]

[ext_resource type="Script" path="res://UIScenes/start_scene.gd" id="1_j8mob"]
[ext_resource type="Texture2D" uid="uid://ds5o1wycpyrk3" path="res://Art/ui/char_select/add_char_selected_right_normal.png" id="2_u1wp0"]
[ext_resource type="Texture2D" uid="uid://bcbh0v5epojsm" path="res://Art/ui/char_select/add_char_selected_right_selected.png" id="3_0oq0q"]
[ext_resource type="Texture2D" uid="uid://c8dfq1wc4t4kn" path="res://Art/ui/char_select/add_char_selected_right_hover.png" id="4_f7hsq"]
[ext_resource type="Theme" uid="uid://b1tb3h6x4i01j" path="res://UIScenes/test_theme.tres" id="5_8o0oq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rd6fl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fvn6g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a18m3"]

[node name="StartScene" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_j8mob")

[node name="CharSelectContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -11.1
anchor_top = -7.475
anchor_right = -0.55
anchor_bottom = 6.175
offset_right = -211.0
offset_bottom = -273.0
scale = Vector2(2, 2)
horizontal_scroll_mode = 0
metadata/_edit_use_anchors_ = true

[node name="VboxContainer" type="VBoxContainer" parent="CharSelectContainer"]
layout_mode = 2
theme_override_constants/separation = -4

[node name="AddCharButton" type="TextureButton" parent="."]
layout_mode = 2
anchor_left = -11.1
anchor_top = 6.475
anchor_right = -0.95
anchor_bottom = 8.175
offset_right = -203.0
offset_bottom = -34.0
scale = Vector2(2, 2)
texture_normal = ExtResource("2_u1wp0")
texture_pressed = ExtResource("3_0oq0q")
texture_hover = ExtResource("4_f7hsq")
stretch_mode = 3
metadata/_edit_use_anchors_ = true

[node name="TextEdit" type="LineEdit" parent="AddCharButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0738916
anchor_top = 0.0588235
anchor_right = 0.753695
anchor_bottom = 0.970588
theme = ExtResource("5_8o0oq")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0.863794, 0.887116, 0.444464, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_rd6fl")
theme_override_styles/focus = SubResource("StyleBoxEmpty_fvn6g")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_a18m3")
text = "hello hello"
caret_blink = true
metadata/_edit_use_anchors_ = true

[node name="NameExistsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -10.7
anchor_top = 8.25
anchor_right = -1.1
anchor_bottom = 9.1
offset_right = -192.0
offset_bottom = -17.0
scale = Vector2(2, 2)
theme = ExtResource("5_8o0oq")
theme_override_colors/font_color = Color(1, 0.351683, 0.412833, 1)
text = "Player name already exists!"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 6.15
anchor_top = -0.95
anchor_right = 12.6744
anchor_bottom = 2.16162
offset_right = -195.975
offset_bottom = -93.465
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4.015, 4.015)
text = "Play"
metadata/_edit_use_anchors_ = true
